tests/bugs/tuple_length_mismatch_605.sy
start :: fn do
    ((1,) in {(1,2)}) <=> true
end
// error: $TupleLengthMismatch
